static/css/main.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400&display=swap');

:root{
    --bg: hsla(60, 10%, 96%, 1);
    --bg-2: hsla(0, 0%, 100%, 1);
    --text: hsla(0, 0%, 7%, 1);
    --primary: hsla(35, 100%, 50%, 1);
}

*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body{
    color: var(--text);
    background-color: var(--bg);
    font-family: 'Poppins', sans-serif;
    h1{
        font-size: 2rem;
    }
    h2{
        font-size: 1.5rem;
    }
    p{
        font-size: 1rem;
    }
}

main{
    margin-inline: auto;
    max-width: 64rem;
}

nav{
    margin: 3rem 1rem;
    & div{
        display: flex;
        align-items: center;
        gap: .5rem;
    }
}

#app{
    display: flex;
    flex-wrap: wrap;
    gap: 1rem;
}

.wrapper{
    margin-inline: 1rem;
}

.card{
    width: calc(50% - .5rem);
    background-color: var(--bg-2);
    padding: 1rem;
    border-radius: .75rem;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    gap: .5rem;
    & div.header{
        display: flex;
        align-items: center;
        gap: .5rem;
    }
    & div.footer{
        display: flex;
        justify-content: space-between;
        align-items: center;
        margin-top: auto;
        & a{
            &:hover{
                transform: scale(1.05);
            }
            transition: transform 300ms ease-in-out;
            border: 1px solid var(--primary);
            display: flex;
            padding: .25rem 1rem;
            border-radius: 1.25rem;
            align-items: center;
            text-decoration: none;
            color: var(--primary);
        }
    }
}

.language{
    display: flex;
    align-items: center;
    gap: .5rem;
    &::before{
        height: 1.5rem;
        content: url('../media/code.svg');
    }
}

